lib_LTLIBRARIES = libimg3-1.0.la

libimg3_1_0_la_SOURCES = \
						libimg3.c
						
libimg3_1_0_la_LDFLAGS = $(libcrippy_LIBS) $(libcrypto_LIBS)  $(libcrippy_LDFLAGS) $(libcrypto_LDFLAGS)
libimg3_1_0_la_LIBS = $(libcrippy_LIBS) $(libcrypto_LIBS)
libimg3_1_0_la_CFLAGS = $(libcrippy_CFLAGS) $(libcrypto_CFLAGS) -I$(top_srcdir)/include

